--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -120,7 +120,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/textview_margin_default"
             android:textColor="@color/darkBrown"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="gone"
+            app:layout_constraintVertical_bias="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_dictionary_textView_syllables_separation_result" />
