Tratando de possíveis erros de consulta em DictionaryFragment.kt

--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -36,8 +36,7 @@
             android:layout_margin="@dimen/margin_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_dictionary_field_word"
-            app:selectionRequired="true">
+            app:layout_constraintTop_toBottomOf="@id/fragment_dictionary_field_word">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/fragment_dictionary_meaning_chip"
