--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
 
     <dimen name="bigTextSize">24sp</dimen>
     <dimen name="defaultTextSize">14sp</dimen>
+    <dimen name="mediumTextSize">18sp</dimen>
 
 
 
