--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -45,6 +45,7 @@
             app:endIconMode="password_toggle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:startIconDrawable="@drawable/ic_password"
             app:layout_constraintTop_toBottomOf="@id/fragment_login_textfield_email">
 
             <com.google.android.material.textfield.TextInputEditText
